Fixed dark mode, better navbar visualisation

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --light-title: #262625;
   --txt: #4e5064;
   --link-txt: #925757;
-  --link-bg: #a8a8a5;
+  --link-bg: #c9ced6;
   --theme-icon: url(./public/moon.png);
 }
 
@@ -18,6 +18,7 @@
   --bg: #131516;
   --txt: #98a3ad;
   --link-txt: #925757;
+  --link-bg: #2e3440;
   --theme-icon: url(./public/sun.png);
 }
 
@@ -35,10 +36,7 @@ body {
 
 a {
   color: var(--link-txt);
-}
-
-a:visited {
-  color: var(--link-txt);
+  text-decoration: none;
 }
 
 ul {
@@ -47,7 +45,6 @@ ul {
 
 #theme-icon {
   content: var(--theme-icon);
-  width: 30px;
 }
 
 #h-menu, #mobile-nav {
@@ -64,6 +61,50 @@ ul {
   51%, 100% { opacity: 0; }
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  font-size: 2rem;
+  margin-top: 1.5rem;
+}
+
+#nav-buttons {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+main {
+  display: flex;
+  margin: 2rem;
+}
+
+#main-nav {
+  padding: 2rem 0;
+  display: flex;
+  width: 10rem;
+}
+
+ul li {
+  padding: 10px;
+  border-radius: 5%;
+  width: 100%;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+#main-nav ul {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+}
+
+.current-page {
+  background-color: var(--link-bg);
+}
+
 @media (max-width: 600px) {
 
   body {
@@ -71,14 +112,17 @@ ul {
   }
 
   header {
-    display: flex;
-    justify-content: space-between;
+    margin: 0;
+    font-size: 1.5rem;
   }
 
   #nav-buttons {
     display: flex;
-    width: 30%;
     justify-content: flex-end;
+  }
+
+  #theme-icon {
+    width: 30px;
   }
 
   #h-menu {
@@ -110,6 +154,10 @@ ul {
 
   #menu {
     font-size: 2rem;
+    width: 80%;
   }
 
+  #main-nav {
+    display: none;
+  }
 }
